--- a/.gitignore
+++ b/.gitignore
@@ -505,3 +505,7 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/unrealengine,c++,visualstudio
+
+Assets/*
+Content/ParagonLtBelica/*
+Content/_Game/Assets/*
